--- a/CloudDevWebSite/CloudDevWebSite.csproj
+++ b/CloudDevWebSite/CloudDevWebSite.csproj
@@ -104,6 +104,10 @@
   <ItemGroup>
     <Content Include="About.aspx" />
     <Content Include="CarPage.aspx" />
+    <Content Include="returnalpagePic.css" />
+    <Content Include="rentalpagePic.css" />
+    <Content Include="driverpagePic.css" />
+    <Content Include="inspectorpagePic.css" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -128,6 +132,7 @@
     <Content Include="Global.asax" />
     <Content Include="HomePage.aspx" />
     <Content Include="homepagePic.css" />
+    <Content Include="carpagePic.css" />
     <Content Include="InspectorPage.aspx" />
     <Content Include="loginPageStyle.css" />
     <Content Include="LoginPage.aspx" />
