Function for data changes added

--- a/CloudDevWebSite/Web.config
+++ b/CloudDevWebSite/Web.config
@@ -7,6 +7,10 @@
   <connectionStrings>
     <add name="TheRentYouRideConnectionString" connectionString="Data Source=AIDANKIETHPC\MSSQLSERVER01;Initial Catalog=TheRentYouRide;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="TheRentYouRideConnectionString2" connectionString="Data Source=AIDANKIETHPC\MSSQLSERVER01;Initial Catalog=TheRentYouRide;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="TheRentYouRideConnectionString3" connectionString="Data Source=AIDANKIETHPC\MSSQLSERVER01;Initial Catalog=TheRentYouRide;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
